...
import { Logo } from "../components/icons/Logo";

export default function WelcomeScreen({ navigation }: GuestStackScreenProps<"WelcomeScreen">) {
    return (
        <View style={styles.view}>
            <VStack safeArea space="20px" style={styles.titleContainer}>
                <Logo testID="logo" />
                <Text size={"title3"} style={styles.subtext}>
                    Crypto asset management{"\n"}made simple
                </Text>
            </VStack>
            <VStack space="15px" marginBottom="20px">
                <Button onPress={() => navigation.navigate("SignUpScreen")} testID="signUpButton">
                    Sign up
                </Button>
                <Button variant="outline" onPress={() => navigation.navigate("SignInScreen")} testID="signInButton">
                    Sign in
                </Button>
            </VStack>
            <Image
                source={require("../assets/images/WelcomeScreenBackground.png")}
                alt="background"
...
