...
            <BottomTab.Screen
                name="SettingsStack"
                component={SettingsStackScreen}
                options={{
                    title: "Settings",
                    tabBarIcon: tabBarIcon(fasBars),
                    tabBarTestID: "settingsTab",
                }}
            />
        </BottomTab.Navigator>
    );
}

...
