...
                });
            }
        })();
    });

    const renderHeader = (
        <VStack space={"15px"} alignItems={"center"} testID="transactionDetailsHeader">
            <FontAwesomeIcon
                icon={isIncomingTransaction ? falCircleArrowDownLeft : falCircleArrowUpRight}
                style={isIncomingTransaction ? styles.receiveIcon : styles.sendIcon}
                size={48}
            />
            <VStack space={"10px"} alignItems={"center"}>
...
                </HStack>
            )}
        </Pressable>
    );

    const renderBasicInfo = (
        <VStack space={"20px"} testID="transactionDetailsBasicInfo">
            <MultiLineListItem
                label={"Transaction ID"}
                value={transaction.transactionAddress}
                copy={true}
                labelCopy={"Transaction ID"}
            />
...
