...
                        })
                    }
                    style={styles.button}
                    _pressed={{
                        background: "text.200",
                    }}
                    testID="transactionHistoryButton"
                >
                    <HStack height="50px" alignItems="center">
                        <FontAwesomeIcon icon={falFileInvoice} style={styles.icon} size={26} />
                        <Text style={styles.buttonText}>Transaction History</Text>
                        <FontAwesomeIcon icon={farChevronRight} style={styles.chevronRightIcon} size={16} />
                    </HStack>
                </Pressable>
            </VStack>
        </View>
    );
...
