...
                    <Text size={"subheadline"} fontWeight={"semibold"}>
                        QR Code
                    </Text>
                </VStack>
                <VStack space="4px">
                    <Pressable
                        testID="walletDocumentsButton"
                        style={styles.button}
                        onPress={() =>
                            navigation.navigate("ReportSelectionScreen", {
                                wallet,
                            })
                        }
...
