...
    return (
        <Button
            variant="outline"
            _text={{ color: "error.500" }}
            onPress={handleSignOut}
            marginTop="13px"
            testID="signOutButton"
        >
            Sign out
        </Button>
    );
}

