...
                ...user,
                role: oldRole,
            });
        }
    }

    const buttonText = role === Role.BASIC ? "Enable Pro" : "Disable Pro";

    return (
        <View style={styles.view}>
            <Text size={"title1"} fontWeight={"semibold"}>
                Cryptify Pro
            </Text>
...
